--- a/assets/css/elements/typography.scss
+++ b/assets/css/elements/typography.scss
@@ -55,7 +55,7 @@ label {
     /* BORDERS */
     /* COLORS */
     /* TEXT */
-    @apply text-sm font-medium;
+    @apply text-base md:text-sm font-medium;
     /* ANIMATION AND EFFECTS */
 }
 
